--- a/SummerSchoolPaper/Makefile
+++ b/SummerSchoolPaper/Makefile
@@ -1,24 +1,14 @@
 # Makefile for EMCSR-2014 paper
 # Started by Ian Gent 8 Aug 2014
 #
-# Requires R, pdflatex, mklatex
+# Requires R, pdflatex
 
-.SUFFIXES: .tex .pdf .Rnw .Snw
+.SUFFIXES: .pdf .Snw
 
 PDFS = paper.pdf
 
-TEXS = paper.tex ack.tex group2.tex obstacles.tex recomputation.tex discussion.tex group3.tex  school.tex group1.tex intro.tex
-
-paper.pdf: $(TEXS)
-
 all: $(PDFS)
 
-.Snw.tex:
-		R CMD Sweave $*.Snw
-
-.Rnw.tex:
-		R CMD Sweave $*.Rnw
-
-.tex.pdf: 
-		latexmk -pdf $*.tex
+.Snw.pdf: 
+		R CMD Sweave --pdf $<
 
