add more temp files

--- a/SummerSchoolPaper/.gitignore
+++ b/SummerSchoolPaper/.gitignore
@@ -1,10 +1,10 @@
 .Rhistory
-paper.aux
-paper.bbl
-paper.blg
-paper-concordance.tex
-paper.fdb_latexmk
-paper.log
-paper.pdf
-paper.synctex.gz
+*.aux
+*.bbl
+*.blg
+*-concordance.tex
+*.fdb_latexmk
+*.log
+*.pdf
+*.synctex.gz
 paper.tex
