--- a/SummerSchoolPaper/.gitignore
+++ b/SummerSchoolPaper/.gitignore
@@ -1,11 +1,11 @@
 .Rhistory
-paper.aux
-paper.bbl
-paper.blg
-paper-concordance.tex
-paper.fdb_latexmk
-paper.log
+*.aux
+*.bbl
+*.blg
+*-concordance.tex
+*.fdb_latexmk
+*.log
 paper.pdf
-paper.synctex.gz
+*.synctex.gz
 paper.tex
 group1-001.pdf
