--- a/SummerSchoolPaper/Makefile
+++ b/SummerSchoolPaper/Makefile
@@ -11,13 +11,14 @@ SWEAVEFILES = ${shell find . -mindepth 1 -maxdepth 1 -name \*.Snw}
 SWEAVETEXFILES = $(SWEAVEFILES:.Snw=.tex)
 
 TEXFILES = ${shell find . -mindepth 1 -maxdepth 1 -name \*.tex -not -name \*.Snw}
+BIBFILES = ${shell find . -mindepth 1 -maxdepth 1 -name \*.bib}
 
 TEXS = $(SWEAVETEXFILES) $(TEXFILES)
 
 # temporary files
 CLEAN = $(SWEAVETEXFILES) *.aux *.bbl *.blg *-concordance.tex *.fdb_latexmk *.log *.out *.synctex.gz group1-001.pdf
 
-paper.pdf: $(SWEAVEFILES) $(SWEAVETEXFILES) $(TEXFILES)
+paper.pdf: $(SWEAVEFILES) $(SWEAVETEXFILES) $(TEXFILES) $(BIBFILES)
 
 all: $(PDFS)
 
